# hangman

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.tf  outputs.tf  pyproject.toml  requirements.txt  variables.tf
app/: Dockerfile  config.py  database.py  exceptions.py  game.py  main.py  models.py  pyproject.toml  repository.py  schemas.py
app/auth/: config.py  dependencies.py  router.py  schemas.py  services.py
app/clients/: models.py  router.py  schemas.py  services.py  utils.py
app/dependencies/: players.py
app/game/: config.py  exceptions.py  models.py  repository.py  router.py  schemas.py  services.py
app/players/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  services.py
app/routers/: players.py  users.py  websockets.py
app/users/: dependencies.py  models.py  repository.py  router.py  schemas.py  services.py  utils.py
front/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
front/src/: App.vue  enums.ts  interfaces.ts  main.ts
front/src/components/: AppButton.vue  AppFooter.vue  AppInput.vue  AppModalTwoButtons.vue  AppNavBar.vue  AppVisualKeyboard.vue  GameAuthenticationForm.vue  GameCharacterInput.vue  GameContinueScreen.vue  GameMiscInformation.vue  GamePlayerCreationForm.vue  GameProfileInformation.vue  GameSelectMenu.vue  GameStatusBar.vue  GameWordToGuess.vue
front/src/helpers/: forms.js
front/src/stores/: app.ts  elementProperties.js  game.ts  menu.ts
front/src/views/: FeedbackView.vue  GameMainView.vue  GameView.vue  (+4 more)
scripts/: run-dev.sh  run-prod.sh
